Fetch customer records using offset and limit